# Signaling_StreamingMedia_Server

./: .gitignore  CMakeLists.txt  README.md  build.sh  register.pcapng  vcpkg.json
CentralService/: CMakeLists.txt  vcpkg.json
CentralService/include/: Common.h  ConfReader.h  Gb28181Session.h  GetCatalog.h  GlobalCtl.h  OpenStream.h  SipCore.h  SipDef.h  SipDirectory.h  SipGbPlay.h  SipHeartBeat.h  SipLocalConfig.h  SipMessage.h  SipMessageHeader.h  SipRegister.h  SipTaskBase.h  TaskTimer.h  ThreadPool.h
CentralService/src/: GetCatalog.cpp  GlobalCtl.cpp  OpenStream.cpp  SipCore.cpp  SipDirectory.cpp  SipGbPlay.cpp  SipHeartBeat.cpp  SipLocalConfig.cpp  SipMessage.cpp  SipMessageHeader.cpp  SipRegister.cpp  SipTaskBase.cpp  ThreadPool.cpp  main.cpp
Common/: CMakeLists.txt
Common/include/dev/: DevTypeCode.h
Common/include/log/: LogManager.h
Common/include/mutex/: AutoMutexLock.h
Common/include/sip/: SipDef.h  SipInclude.h  SipMessageHeader.h  SipStatusCode.h  SipTaskBase.h
Common/include/thread/: ThreadPool.h
Common/include/utils/: JsonParser.h  XmlParser.h
Common/src/: ConfReader.cpp  ECThread.cpp  JsonParser.cpp  LogManager.cpp  SipMessageHeader.cpp  SipTaskBase.cpp  TaskTimer.cpp  ThreadPool.cpp  XmlParser.cpp
EdgeService/: CMakeLists.txt
EdgeService/include/: Common.h  ECThread.h  Gb28181Session_ende.h  GlobalController.h  GlobalCtl.h  LogManager.h  SipCore.h  SipDirectory.h  SipGbPlay.h  SipHeartBeat.h  SipLocalConfig.h  SipMessage.h  SipRegister.h  SipTaskBase.h  TaskTimer.h  ThreadPool.h  common.h
EdgeService/src/: ConfReader.cpp  ConfigReader.cpp  ECThread.cpp  EC_thread.cpp  Gb28181Session.cpp  GlobalClt.cpp  GlobalController.cpp  GlobalCtl.cpp  SipCore.cpp  SipDirectory.cpp  SipGbPlay.cpp  SipHeartBeat.cpp  SipLocalConfig.cpp  SipMessage.cpp  SipRegister.cpp  SipTaskBase.cpp  TaskTimer.cpp  ThreadPool.cpp  main.cpp  thread_pool.cpp
config/: CentralService.conf  EdgeService.conf  SipSubService.conf  data.ps  data1.ps  out.h264
docs/: 2-服务器初始组件.md  3-SIP信令服务器.md  cmake+vcpkg的联合使用.md  pjsip.md
